Modify colors to resolve accessibility color contrast issues

--- a/redbuttegarden/redbuttegarden/static/redbuttegarden/css/rbg.css
+++ b/redbuttegarden/redbuttegarden/static/redbuttegarden/css/rbg.css
@@ -585,7 +585,7 @@ a:hover {
 
 .red {
     font-weight: bold;
-    color: #FF0000;
+    color: var(--rbg-fall-leaves-red);
 }
 
 .blue {
